<resources>
    <string name="app_name">Calculadora PDM 2020 2</string>
    <string name="zero">0</string>
    <string name="um">1</string>
    <string name="dois">2</string>
    <string name="limpar">C</string>
    <string name="tres">3</string>
    <string name="quatro">4</string>
    <string name="cinco">5</string>
    <string name="seis">6</string>
    <string name="sete">7</string>
    <string name="oito">8</string>
    <string name="nove">9</string>
    <string name="configuracoesMi">Configurações</string>
    <string name="sairMi">Sair</string>
    <string name="virgula">,</string>
    <string name="igual">=</string>
    <string name="mais">+</string>
    <string name="menos">-</string>
    <string name="multiplica">x</string>
    <string name="divisao">/</string>
    <string name="site_ifsp">Site IFSP</string>
    <string name="chamar_Ifsp">Chamar</string>
    <string name="tipo_calculadora">Tipo Calculadora</string>
    <string name="avancada">Avançada</string>
    <string name="basica">Básica</string>
    <string name="raiz_quadrada">√</string>
    <string name="salvar">Salvar</string>
    <string name="potenciaXY">x^y</string>
</resources>