<?xml version="1.0" encoding="utf-8"?>
<ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.ConfiguracoesActivity">

    <TextView
        android:id="@+id/tipoCalculadoraTv"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/tipo_calculadora"
        android:gravity="center_horizontal"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <RadioGroup
        android:id="@+id/tipoCalculadoraRg"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tipoCalculadoraTv" >

        <RadioButton
            android:id="@+id/avancadoRb"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/avancada" />

        <RadioButton
            android:id="@+id/basicaRb"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/basica" />

    </RadioGroup>

    <Button
    android:id="@+id/salvarBtn"
    android:layout_width="0dp"
    android:layout_height="wrap_content"
    android:onClick="onClick"
    android:text="Salvar" />

</androidx.constraintlayout.widget.ConstraintLayout>